# myspace

./: CMakeLists.txt  README.md  config.h  config.hpp  configure  install.sh  linux.cpp  main.cpp  makefile  myspace.cmake  myspace.h  myspace.hpp  myspace_config.h  myspace_include.h  this_space.hpp  this_space.sln  this_space.vcxproj  this_space.vcxproj.filters  vs2015.cpp  vs2015_2.cpp
_/: include.hpp  pattern.hpp  stdafx.hpp
algorithm/: algorithm.hpp
annoymous/: annoymous.h  annoymous.hpp
any/: any.hpp
code/: reuse.hpp
codec/: codec.hpp
concurrency/: container.hpp  deque.hpp  exception.hpp  factory.hpp  set.hpp
config/: config.cc  config.h  config.hpp
coroutine/: coroutine.h  coroutine.hpp  coroutinepool.hpp
coroutine/_/: fiber.hpp  ucontext.hpp
critical/: critical.cc  critical.h  critical.hpp
defer/: defer.hpp
detector/: detector.hpp
detector/_/: epoll.hpp  include.hpp  select.hpp
dns/: query.hpp
dns/_/: dnsquery.hpp  query.hpp  res.hpp
dns/dns/: dns.hpp
error/: error.cc  error.h  error.hpp
exception/: exception.cc  exception.h  exception.hpp
goroutine/: goroutine.hpp
http/: http.hpp
http/_/: client.hpp  request.hpp  response.hpp  structure.hpp  uri.hpp
json/: json.hpp
listener/: listener.cc  listener.h  listener.hpp
logger/: logger.cc  logger.cpp  logger.h  logger.hpp
memory/: memory.h  memory.hpp
microphone/: microphone.hpp
mutex/: mutex.h  mutex.hpp
myspace/: myspace.hpp  myspace_include.h
myspace/annoymous/: annoymous.hpp
myspace/any/: any.hpp
myspace/codec/: codec.hpp
myspace/config/: config.hpp
myspace/coroutine/: coroutine.hpp
myspace/critical/: critical.hpp
myspace/detector/: detector.hpp
myspace/error/: error.hpp
myspace/exception/: exception.hpp
myspace/listener/: listener.hpp
myspace/logger/: logger.cpp  logger.hpp
myspace/memory/: memory.hpp
myspace/mutex/: mutex.hpp
myspace/os/: os.hpp
myspace/pack/: pack.hpp
myspace/path/: path.hpp
myspace/pool/: pool.hpp
myspace/process/: process.hpp
myspace/scope/: scope.hpp
myspace/socket/: socket.hpp  socketopt.hpp
myspace/static/: static.hpp
myspace/strings/: strings.hpp
myspace/threadpool/: threadpool.cpp  threadpool.hpp
myspace/time/: time.hpp
myspace/uuid/: uuid.hpp
myspace/wave/: wave.hpp  wavefile.hpp  wavetool.hpp
net/: addr.hpp  netstream.hpp  socketbase.hpp  socketopt.hpp  socketstream.hpp
net/tcp/: accepter.hpp  socket.hpp
net/udp/: socket.hpp
os/: explorer.hpp  os.cc  os.h  os.hpp
pack/: pack.h  pack.hpp
path/: path.cc  path.h  path.hpp
pool/: pool.hpp
process/: process.hpp
scope/: scope.h  scope.hpp
select/: select.cc  select.h
socket/: socket.cc  socket.h  socket.hpp  socketopt.hpp
static/: static.h  static.hpp
strings/: sstream.hpp  strings.cc  strings.h  strings.hpp
test/: 2015.sln  2015.vcxproj  2015.vcxproj.filters  echo.cpp  main.cpp  main.py  makefile  vs2015-echo.vcxproj  vs2015.sln
threadpool/: threadpool.cc  threadpool.cpp  threadpool.h  threadpool.hpp
time/: time.cc  time.h  time.hpp
uuid/: uuid.cc  uuid.h  uuid.hpp
vad/: energyvad.hpp
wav/: file.hpp  tool.hpp  wav.h  wav.hpp
wave/: wave.hpp  wavefile.hpp  wavetool.hpp
